# ChatDemo

./: .coderabbit.yaml  .dockerignore  .env.template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVLOG.md  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: chat.py  config.py  main.py  models.py
docs/plans/: 2026-03-06-chat-demo-design.md  2026-03-06-chat-demo-implementation.md  2026-03-08-fix-cicd-and-deploy.md
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx
tests/: test_chat.py  test_config.py  test_main.py  test_models.py
